# UnrealAutoMod

./: .gitignore  README.md  pyproject.toml  readme.md  requirements.txt  run_tempo_exe.bat  run_tempo_py.bat  setup.py
.github/workflows/: pylint.yml  python-app.yml
assets/: help.bat  left_to_add.txt  run_exe.bat  run_exe_default.bat
assets/base/: help.bat  run.bat  run_default.bat  run_default_headless.bat  unreal_auto_mod_updater.bat
assets/build_scripts/: UnrealAutoModCLI.json  build.bat  build.json  build.py  build_and_test.bat  build_and_zip.bat  cleanup.py  cli_params.txt  clone_for_development.bat  dependency_installer.py  make_release.py  run_build.py  run_build_and_test.py  run_build_and_zip.py  test_release.py  zip_release.py
assets/dev_tools/: cleanup_repo.bat  clone_repo.bat  lint_code.bat  make_dev_tools_release.bat  make_exe_release.bat  project_info.ini  refresh_deps.bat  setup_virtual_environment.bat  test_exe_release.bat  test_virtual_environment.bat  update_dev_tools.bat  upload_latest_to_repo.bat
assets/docs/: enums.md  faq.md  settings_json.md  to_do_list.md
assets/game_presets/: days_gone.json
assets/pylint/: lint_src.py
assets/settings/: run.bat  settings.json
assets/templates/: settings.json
assets/to_do/: left_to_add.txt
dev_files/: to_do.txt
docs/: enums.md  faq.md  index.html  readme.md  research.md  settings_json.md  to_do_list.md
python_project/Tempo/: gui.py  main.py
src/: __init__.py  __main__.py  alt_exe_runner.py  cli.json  cli.py  engine.py  engine_moniter.py  enums.py  epic.py  game_runner.py  general_utils.py  left_to_add.py  left_to_add.txt  log.py  log_colors.json  main.bat  main.py  mods.py  packing.py  repak.py  repak_utilities.py  routine_checks.py  script_states.py  settings.json  settings.py  settings_configurator.py  steam.py  tempo_enums.py  tempo_game_runner.py  tempo_packing.py  tempo_script_states.py  tempo_settings.py  tempo_testing.py  tempo_threads.py  tempo_utilities.py  tempo_windows.py  testing.py  thread_constant.py  thread_engine_monitor.py  thread_game_monitor.py  (+5 more)
src/json/: cli.json  log_colors.json
src/unreal_auto_mod/: __init__.py  __main__.py  cli.py  cli_py.py  cli_py_argparse.py  console.py  engine.py  enums.py  game_runner.py  gen_py_utils.py  gui_functions.py  hook_states.py  log.py  log_colors.py  log_info.py  log_py.py  main.py  main_logic.py  mods.py  packing.py  repak_utilities.py  script_states.py  settings.py  thread_constant.py  thread_engine_monitor.py  thread_game_monitor.py  ue_dev_py_enums.py  ue_dev_py_utils.py  unreal_pak.py  utilities.py  win_man.py  win_man_enums.py  win_man_py.py
unreal_project/4_23+/: Tempo.uproject
(+117 files in other folders)
