[tool.poetry]
name = "unrealautomod"
version = "0.1.0"
description = ""
authors = ["Mythical <MythicalData@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psutil = "^6.0.0"
screeninfo = "^0.8.1"
pygetwindow = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
